--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.application.name=npci-posting-service
-server.port=8081
+server.port=7083
 
 bootstrap-servers=http://localhost:29092
 
@@ -11,3 +11,14 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 customer.posting.request=customer_posting_request
+
+bbps.pub.crt.path=C://Vignesh//BBPS//keys//signer.cer
+bbps.pvt.key.path=C:\\Vignesh\\BBPS\\keys\\signer.pfx
+bbps.pvt.key.type=PKCS12
+bbps.pvt.key.password=Amica@1234
+bbps.pvt.key.alais=24237448
+
+is.signature.verify.on=true
+
+bbps.core.topic=bbps_core_process
+
