BBPS Incoming-Swagger Added pom changes

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,3 +22,5 @@ is.signature.verify.on=true
 
 bbps.core.topic=bbps_core_process
 
+springfox.documentation.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
