--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=npci-posting-service
+spring.application.name=bbps-incoming-service
 server.port=7083
 
 bootstrap-servers=http://localhost:29092
@@ -12,8 +12,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 customer.posting.request=customer_posting_request
 
-bbps.pub.crt.path=C://Vignesh//BBPS//keys//signer.cer
-bbps.pvt.key.path=C:\\Vignesh\\BBPS\\keys\\signer.pfx
+bbps.pub.crt.path=C://pavan//BBPS//keys//signer.cer
+bbps.pvt.key.path=C:\\pavan\\BBPS\\keys\\signer.pfx
 bbps.pvt.key.type=PKCS12
 bbps.pvt.key.password=Amica@1234
 bbps.pvt.key.alais=24237448
