--- a/src/main/resources/application-uat.properties
+++ b/src/main/resources/application-uat.properties
@@ -1,2 +1,2 @@
-spring.application.name=npci-posting-service
-server.port=${NPCI_POSTING_SERVERPORT}
+spring.application.name=bbps-incoming-service
+server.port=${BBPS_INCOMING_SERVERPORT}
